@@ -185,7 +185,6 @@ import(checkmate)
 import(ggplot2)
 import(plot3D)
 importFrom(Rcpp,sourceCpp)
-importFrom(emoa,nondominated_points)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
@@ -193,5 +192,6 @@ importFrom(graphics,grid)
 importFrom(graphics,image)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(mco,nsga2)
 importFrom(stats,reformulate)
 useDynLib(smoof)
